@@ -6,7 +6,6 @@
 package net.minecraftforge.fml;
 
 import com.google.common.collect.ImmutableList;
-import net.minecraftforge.eventbus.api.Event;
 import net.minecraftforge.fml.event.IModBusEvent;
 import net.minecraftforge.fml.loading.FMLEnvironment;
 import net.minecraftforge.fml.loading.FMLLoader;
@@ -88,7 +87,7 @@ public class ModLoader {
         this.loadingModList = FMLLoader.getLoadingModList();
         this.loadingExceptions = this.loadingModList.getErrors().stream()
                 .flatMap(ModLoadingException::fromEarlyException)
-                .toList();
+                .collect(Collectors.toList());
         this.loadingWarnings = this.loadingModList.getBrokenFiles().stream()
                 .map(file -> new ModLoadingWarning(null, ModLoadingStage.VALIDATE, InvalidModIdentifier.identifyJarProblem(file.getFilePath()).orElse("fml.modloading.brokenfile"), file.getFileName()))
                 .collect(Collectors.toList());
@@ -155,11 +154,13 @@ public class ModLoader {
             loadingStateValid = false;
             throw new LoadingFailedException(loadingExceptions);
         }
-        List<? extends ForgeFeature.Bound> failedBounds = loadingModList.getMods().stream()
-                .map(ModInfo::getForgeFeatures)
-                .flatMap(List::stream)
-                .filter(bound -> !ForgeFeature.testFeature(FMLEnvironment.dist, bound))
-                .toList();
+        var failedBounds = new ArrayList<ForgeFeature.Bound>();
+        for (var mod : loadingModList.getMods()) {
+            for (var feature : mod.getForgeFeatures()) {
+                if (!ForgeFeature.testFeature(FMLEnvironment.dist, feature))
+                    failedBounds.add(feature);
+            }
+        }
 
         if (!failedBounds.isEmpty()) {
             LOGGER.fatal(CORE, "Failed to validate feature bounds for mods: {}", failedBounds);
@@ -357,49 +358,53 @@ public class ModLoader {
         return completedStates.contains(state);
     }
 
-    public <T extends Event & IModBusEvent> void runEventGenerator(Function<ModContainer, T> generator) {
+    public <T extends IModBusEvent> void runEventGenerator(Function<ModContainer, T> generator) {
         if (!loadingStateValid) {
             LOGGER.error("Cowardly refusing to send event generator to a broken mod state");
             return;
         }
-        ModList.get().forEachModInOrder(mc -> mc.acceptEvent(generator.apply(mc)));
+        for (var mod : ModList.get().getLoadedMods())
+            mod.acceptEvent(generator.apply(mod));
     }
 
-    public <T extends Event & IModBusEvent> void postEvent(T e) {
+    public <T extends IModBusEvent> void postEvent(T e) {
+        var cls = e.getClass();
         if (!loadingStateValid) {
             LOGGER.error("Cowardly refusing to send event {} to a broken mod state", e.getClass().getName());
             return;
         }
-        ModList.get().forEachModInOrder(mc -> mc.acceptEvent(e));
+        for (var mod : ModList.get().getLoadedMods())
+            mod.acceptEvent(e);
     }
 
-    public <T extends Event & IModBusEvent> T postEventWithReturn(T e) {
+    public <T extends IModBusEvent> T postEventWithReturn(T e) {
         if (!loadingStateValid) {
             LOGGER.error("Cowardly refusing to send event {} to a broken mod state", e.getClass().getName());
             return e;
         }
-        ModList.get().forEachModInOrder(mc -> mc.acceptEvent(e));
+        for (var mod : ModList.get().getLoadedMods())
+            mod.acceptEvent(e);
         return e;
     }
 
     @SuppressWarnings("removal")
-    public <T extends Event & IModBusEvent> void postEventWrapContainerInModOrder(T event) {
+    public <T extends IModBusEvent> void postEventWrapContainerInModOrder(T event) {
         postEventWithWrapInModOrder(event,
             (mc, e) -> ModLoadingContext.get().setActiveContainer(mc),
             (mc, e) -> ModLoadingContext.get().setActiveContainer(null)
         );
     }
 
-    public <T extends Event & IModBusEvent> void postEventWithWrapInModOrder(T e, BiConsumer<ModContainer, T> pre, BiConsumer<ModContainer, T> post) {
+    public <T extends IModBusEvent> void postEventWithWrapInModOrder(T e, BiConsumer<ModContainer, T> pre, BiConsumer<ModContainer, T> post) {
         if (!loadingStateValid) {
             LOGGER.error("Cowardly refusing to send event {} to a broken mod state", e.getClass().getName());
             return;
         }
-        ModList.get().forEachModInOrder(mc -> {
-            pre.accept(mc, e);
-            mc.acceptEvent(e);
-            post.accept(mc, e);
-        });
+        for (var mod : ModList.get().getLoadedMods()) {
+            pre.accept(mod, e);
+            mod.acceptEvent(e);
+            post.accept(mod, e);
+        }
     }
 
     public List<ModLoadingWarning> getWarnings() {
@@ -416,7 +421,7 @@ public class ModLoader {
         return runningDataGen;
     }
 
-    private static class ErroredModContainer extends ModContainer {
+    private static final class ErroredModContainer extends ModContainer {
         public ErroredModContainer() {
             super();
         }
