@@ -21,8 +21,7 @@ import net.minecraft.world.entity.*;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.level.chunk.storage.SerializableChunkData;
 import net.minecraftforge.common.MinecraftForge;
-import net.minecraftforge.eventbus.api.Cancelable;
-import net.minecraftforge.eventbus.api.Event;
+import net.minecraftforge.common.util.Result;
 import net.minecraftforge.fml.ModLoader;
 import net.minecraftforge.fml.event.IModBusEvent;
 import org.jetbrains.annotations.ApiStatus;
@@ -42,7 +41,6 @@ import net.minecraft.core.Direction;
 import net.minecraft.core.Holder;
 import net.minecraft.core.NonNullList;
 import net.minecraft.core.RegistryAccess;
-import net.minecraft.nbt.CompoundTag;
 import net.minecraft.network.Connection;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.protocol.game.ServerboundPlayerActionPacket;
@@ -107,6 +105,7 @@ import net.minecraft.world.level.levelgen.feature.ConfiguredFeature;
 import net.minecraft.world.level.portal.PortalShape;
 import net.minecraft.world.level.storage.PlayerDataStorage;
 import net.minecraft.world.level.storage.ServerLevelData;
+import net.minecraft.world.level.storage.ValueInput;
 import net.minecraft.world.level.storage.loot.LootTable;
 import net.minecraft.world.phys.BlockHitResult;
 import net.minecraft.world.phys.HitResult;
@@ -201,7 +200,6 @@ import net.minecraftforge.event.level.SleepFinishedTimeEvent;
 import net.minecraftforge.event.network.ChannelRegistrationChangeEvent;
 import net.minecraftforge.event.network.ConnectionStartEvent;
 import net.minecraftforge.event.network.GatherLoginConfigurationTasksEvent;
-import net.minecraftforge.eventbus.api.Event.Result;
 import net.minecraftforge.fml.LogicalSide;
 
 @ApiStatus.Internal
@@ -211,53 +209,34 @@ public final class ForgeEventFactory {
     private ForgeEventFactory() {}
 
     /**
-     * Post an event to the {@link MinecraftForge#EVENT_BUS}
-     * @return true if the event is {@link Cancelable} and has been canceled
-     */
-    private static boolean post(Event e) {
-        return MinecraftForge.EVENT_BUS.post(e);
-    }
-
-    /**
-     * Post an event to the {@link MinecraftForge#EVENT_BUS}, then return the event object
-     * @return the event object passed in and possibly modified by listeners
-     */
-    private static <E extends Event> E fire(E e) {
-        post(e);
-        return e;
-    }
-
-    /**
      * Post an event to the {@link ModLoader#get()} event bus
      */
-    private static <T extends Event & IModBusEvent> void postModBus(T e) {
+    private static <T extends IModBusEvent> void postModBus(T e) {
         ML.postEvent(e);
     }
 
     public static boolean onMultiBlockPlace(@Nullable Entity entity, List<BlockSnapshot> blockSnapshots, Direction direction) {
-        var snap = blockSnapshots.get(0);
+        var snap = blockSnapshots.getFirst();
         var placedAgainst = snap.getLevel().getBlockState(snap.getPos().relative(direction.getOpposite()));
-        var event = new EntityMultiPlaceEvent(blockSnapshots, placedAgainst, entity);
-        return post(event);
+        return EntityMultiPlaceEvent.BUS.post(new EntityMultiPlaceEvent(blockSnapshots, placedAgainst, entity));
     }
 
     public static boolean onBlockPlace(@Nullable Entity entity, @NotNull BlockSnapshot blockSnapshot, @NotNull Direction direction) {
         var placedAgainst = blockSnapshot.getLevel().getBlockState(blockSnapshot.getPos().relative(direction.getOpposite()));
-        var event = new BlockEvent.EntityPlaceEvent(blockSnapshot, placedAgainst, entity);
-        return post(event);
+        return BlockEvent.EntityPlaceEvent.BUS.post(new BlockEvent.EntityPlaceEvent(blockSnapshot, placedAgainst, entity));
     }
 
     public static boolean onNeighborNotify(Level level, BlockPos pos, BlockState state, EnumSet<Direction> notifiedSides, boolean forceRedstoneUpdate) {
-        return post(new NeighborNotifyEvent(level, pos, state, notifiedSides, forceRedstoneUpdate));
+        return NeighborNotifyEvent.BUS.post(new NeighborNotifyEvent(level, pos, state, notifiedSides, forceRedstoneUpdate));
     }
 
     public static boolean doPlayerHarvestCheck(Player player, BlockState state, boolean success) {
-        return fire(new PlayerEvent.HarvestCheck(player, state, success)).canHarvest();
+        return PlayerEvent.HarvestCheck.BUS.fire(new PlayerEvent.HarvestCheck(player, state, success)).canHarvest();
     }
 
     public static float getBreakSpeed(Player player, BlockState state, float original, BlockPos pos) {
         var event = new PlayerEvent.BreakSpeed(player, state, original, pos);
-        return (post(event) ? -1 : event.getNewSpeed());
+        return PlayerEvent.BreakSpeed.BUS.post(event) ? -1 : event.getNewSpeed();
     }
 
     public static void onPlayerDestroyItem(Player player, @NotNull ItemStack stack, @Nullable InteractionHand hand) {
@@ -265,11 +244,11 @@ public final class ForgeEventFactory {
     }
 
     public static void onPlayerDestroyItem(Player player, @NotNull ItemStack stack, @Nullable EquipmentSlot slot) {
-        post(new PlayerDestroyItemEvent(player, stack, slot));
+        PlayerDestroyItemEvent.BUS.post(new PlayerDestroyItemEvent(player, stack, slot));
     }
 
     public static boolean checkSpawnPlacements(EntityType<?> entityType, ServerLevelAccessor level, EntitySpawnReason spawnType, BlockPos pos, RandomSource random, boolean defaultResult) {
-        var result = fire(new SpawnPlacementCheck(entityType, level, spawnType, pos, random, defaultResult)).getResult();
+        var result = SpawnPlacementCheck.BUS.fire(new SpawnPlacementCheck(entityType, level, spawnType, pos, random, defaultResult)).getResult();
         return result == Result.DEFAULT ? defaultResult : result == Result.ALLOW;
     }
 
@@ -283,7 +262,7 @@ public final class ForgeEventFactory {
      * @see PositionCheck
      */
     public static boolean checkSpawnPosition(Mob mob, ServerLevelAccessor level, EntitySpawnReason spawnType) {
-        var result = fire(new PositionCheck(mob, level, spawnType, null)).getResult();
+        var result = PositionCheck.BUS.fire(new PositionCheck(mob, level, spawnType, null)).getResult();
         if (result == Result.DEFAULT)
             return mob.checkSpawnRules(level, spawnType) && mob.checkSpawnObstruction(level);
         return result == Result.ALLOW;
@@ -295,7 +274,7 @@ public final class ForgeEventFactory {
      * @implNote See in-line comments about custom spawn rules.
      */
     public static boolean checkSpawnPositionSpawner(Mob mob, ServerLevelAccessor level, EntitySpawnReason spawnType, SpawnData spawnData, BaseSpawner spawner) {
-        var result = fire(new PositionCheck(mob, level, spawnType, null)).getResult();
+        var result = PositionCheck.BUS.fire(new PositionCheck(mob, level, spawnType, null)).getResult();
         if (result == Result.DEFAULT) {
             // Spawners do not evaluate Mob#checkSpawnRules if any custom rules are present. This is despite the fact that these two methods do not check the same things.
             return (spawnData.getCustomSpawnRules().isPresent() || mob.checkSpawnRules(level, spawnType)) && mob.checkSpawnObstruction(level);
@@ -337,7 +316,7 @@ public final class ForgeEventFactory {
     @SuppressWarnings("deprecation") // Call to deprecated Mob#finalizeSpawn is expected.
     public static SpawnGroupData onFinalizeSpawn(Mob mob, ServerLevelAccessor level, DifficultyInstance difficulty, EntitySpawnReason spawnType, @Nullable SpawnGroupData spawnData) {
         var event = new MobSpawnEvent.FinalizeSpawn(mob, level, mob.getX(), mob.getY(), mob.getZ(), difficulty, spawnType, spawnData, null, null);
-        boolean cancel = post(event);
+        boolean cancel = MobSpawnEvent.FinalizeSpawn.BUS.post(event);
 
         if (!cancel)
             return mob.finalizeSpawn(level, event.getDifficulty(), event.getSpawnReason(), event.getSpawnData());
@@ -352,96 +331,97 @@ public final class ForgeEventFactory {
      * @see #onFinalizeSpawn
      */
     @Nullable
-    public static MobSpawnEvent.FinalizeSpawn onFinalizeSpawnSpawner(Mob mob, ServerLevelAccessor level, DifficultyInstance difficulty, @Nullable SpawnGroupData spawnData, @Nullable CompoundTag spawnTag, BaseSpawner spawner) {
-        return fire(new MobSpawnEvent.FinalizeSpawn(mob, level, mob.getX(), mob.getY(), mob.getZ(), difficulty, EntitySpawnReason.SPAWNER, spawnData, spawnTag, spawner));
+    public static MobSpawnEvent.FinalizeSpawn onFinalizeSpawnSpawner(Mob mob, ServerLevelAccessor level, DifficultyInstance difficulty, @Nullable SpawnGroupData spawnData, @Nullable ValueInput spawnTag, BaseSpawner spawner) {
+        var event = new MobSpawnEvent.FinalizeSpawn(mob, level, mob.getX(), mob.getY(), mob.getZ(), difficulty, EntitySpawnReason.SPAWNER, spawnData, spawnTag, spawner);
+        return MobSpawnEvent.FinalizeSpawn.BUS.post(event) ? null : event;
     }
 
     public static Result canEntityDespawn(Mob entity, ServerLevelAccessor level) {
-        return fire(new AllowDespawn(entity, level)).getResult();
+        return AllowDespawn.BUS.fire(new AllowDespawn(entity, level)).getResult();
     }
 
     public static int getItemBurnTime(@NotNull ItemStack itemStack, int burnTime, @Nullable RecipeType<?> recipeType) {
-        return fire(new FurnaceFuelBurnTimeEvent(itemStack, burnTime, recipeType)).getBurnTime();
+        return FurnaceFuelBurnTimeEvent.BUS.fire(new FurnaceFuelBurnTimeEvent(itemStack, burnTime, recipeType)).getBurnTime();
     }
 
     public static int getExperienceDrop(LivingEntity entity, Player attackingPlayer, int originalExperience) {
        var event = new LivingExperienceDropEvent(entity, attackingPlayer, originalExperience);
-       if (post(event))
+       if (LivingExperienceDropEvent.BUS.post(event))
            return 0;
        return event.getDroppedExperience();
     }
 
     public static int getMaxSpawnPackSize(Mob entity) {
-        var maxCanSpawnEvent = fire(new LivingPackSizeEvent(entity));
+        var maxCanSpawnEvent = LivingPackSizeEvent.BUS.fire(new LivingPackSizeEvent(entity));
         return maxCanSpawnEvent.getResult() == Result.ALLOW ? maxCanSpawnEvent.getMaxPackSize() : entity.getMaxSpawnClusterSize();
     }
 
     public static Component getPlayerDisplayName(Player player, Component username) {
-        return fire(new PlayerEvent.NameFormat(player, username)).getDisplayname();
+        return PlayerEvent.NameFormat.BUS.fire(new PlayerEvent.NameFormat(player, username)).getDisplayname();
     }
 
     public static Component getPlayerTabListDisplayName(Player player) {
-        return fire(new PlayerEvent.TabListNameFormat(player)).getDisplayName();
+        return PlayerEvent.TabListNameFormat.BUS.fire(new PlayerEvent.TabListNameFormat(player)).getDisplayName();
     }
 
     public static BlockState fireFluidPlaceBlockEvent(LevelAccessor level, BlockPos pos, BlockPos liquidPos, BlockState state) {
-        return fire(new BlockEvent.FluidPlaceBlockEvent(level, pos, liquidPos, state)).getNewState();
+        return BlockEvent.FluidPlaceBlockEvent.BUS.fire(new BlockEvent.FluidPlaceBlockEvent(level, pos, liquidPos, state)).getNewState();
     }
 
     public static ItemTooltipEvent onItemTooltip(ItemStack itemStack, @Nullable Player entityPlayer, List<Component> list, TooltipFlag flags) {
-        return fire(new ItemTooltipEvent(itemStack, entityPlayer, list, flags));
+        return ItemTooltipEvent.BUS.fire(new ItemTooltipEvent(itemStack, entityPlayer, list, flags));
     }
 
     public static SummonAidEvent fireZombieSummonAid(Zombie zombie, Level level, int x, int y, int z, LivingEntity attacker, double summonChance) {
-        return fire(new SummonAidEvent(zombie, level, x, y, z, attacker, summonChance));
+        return SummonAidEvent.BUS.fire(new SummonAidEvent(zombie, level, x, y, z, attacker, summonChance));
     }
 
     public static boolean onEntityStruckByLightning(Entity entity, LightningBolt bolt) {
-        return post(new EntityStruckByLightningEvent(entity, bolt));
+        return EntityStruckByLightningEvent.BUS.post(new EntityStruckByLightningEvent(entity, bolt));
     }
 
     public static int onItemUseStart(LivingEntity entity, ItemStack item, int duration) {
         var event = new LivingEntityUseItemEvent.Start(entity, item, duration);
-        return post(event) ? -1 : event.getDuration();
+        return LivingEntityUseItemEvent.Start.BUS.post(event) ? -1 : event.getDuration();
     }
 
     public static int onItemUseTick(LivingEntity entity, ItemStack item, int duration) {
         var event = new LivingEntityUseItemEvent.Tick(entity, item, duration);
-        return post(event) ? -1 : event.getDuration();
+        return LivingEntityUseItemEvent.Tick.BUS.post(event) ? -1 : event.getDuration();
     }
 
     public static boolean onUseItemStop(LivingEntity entity, ItemStack item, int duration) {
-        return post(new LivingEntityUseItemEvent.Stop(entity, item, duration));
+        return LivingEntityUseItemEvent.Stop.BUS.post(new LivingEntityUseItemEvent.Stop(entity, item, duration));
     }
 
     public static ItemStack onItemUseFinish(LivingEntity entity, ItemStack item, int duration, ItemStack result) {
-        return fire(new LivingEntityUseItemEvent.Finish(entity, item, duration, result)).getResultStack();
+        return LivingEntityUseItemEvent.Finish.BUS.fire(new LivingEntityUseItemEvent.Finish(entity, item, duration, result)).getResultStack();
     }
 
     public static void onStartEntityTracking(Entity entity, Player player) {
-        post(new PlayerEvent.StartTracking(player, entity));
+        PlayerEvent.StartTracking.BUS.post(new PlayerEvent.StartTracking(player, entity));
     }
 
     public static void onStopEntityTracking(Entity entity, Player player) {
-        post(new PlayerEvent.StopTracking(player, entity));
+        PlayerEvent.StopTracking.BUS.post(new PlayerEvent.StopTracking(player, entity));
     }
 
     public static void firePlayerLoadingEvent(Player player, File playerDirectory, String uuidString) {
-        post(new PlayerEvent.LoadFromFile(player, playerDirectory, uuidString));
+        PlayerEvent.LoadFromFile.BUS.post(new PlayerEvent.LoadFromFile(player, playerDirectory, uuidString));
     }
 
     public static void firePlayerSavingEvent(Player player, File playerDirectory, String uuidString) {
-        post(new PlayerEvent.SaveToFile(player, playerDirectory, uuidString));
+        PlayerEvent.SaveToFile.BUS.post(new PlayerEvent.SaveToFile(player, playerDirectory, uuidString));
     }
 
     public static void firePlayerLoadingEvent(Player player, PlayerDataStorage playerFileData, String uuidString) {
-        post(new PlayerEvent.LoadFromFile(player, playerFileData.getPlayerDataFolder(), uuidString));
+        PlayerEvent.LoadFromFile.BUS.post(new PlayerEvent.LoadFromFile(player, playerFileData.getPlayerDataFolder(), uuidString));
     }
 
     @Nullable
     public static BlockState onToolUse(BlockState originalState, UseOnContext context, ToolAction toolAction, boolean simulate) {
         var event = new BlockToolModificationEvent(originalState, context, toolAction, simulate);
-        return post(event) ? null : event.getFinalState();
+        return BlockToolModificationEvent.BUS.post(event) ? null : event.getFinalState();
     }
 
     public static int onApplyBonemeal(@Nullable Player player, Level level, BlockPos pos, BlockState state, ItemStack stack) {
@@ -449,7 +429,7 @@ public final class ForgeEventFactory {
             return 0;
 
         var event = new BonemealEvent(player, level, pos, state, stack);
-        if (post(event)) return -1;
+        if (BonemealEvent.BUS.post(event)) return -1;
         if (event.getResult() == Result.ALLOW) {
             if (!level.isClientSide)
                 stack.shrink(1);
@@ -461,7 +441,7 @@ public final class ForgeEventFactory {
     @Nullable
     public static InteractionResult onBucketUse(@NotNull Player player, @NotNull Level level, @NotNull ItemStack stack, @Nullable HitResult target) {
         var event = new FillBucketEvent(player, stack, level, target);
-        if (post(event))
+        if (FillBucketEvent.BUS.post(event))
             return InteractionResult.FAIL;
 
         if (event.getResult() == Result.ALLOW) {
@@ -480,84 +460,87 @@ public final class ForgeEventFactory {
         return null;
     }
 
-    public static PlayLevelSoundEvent.AtEntity onPlaySoundAtEntity(Entity entity, Holder<SoundEvent> name, SoundSource category, float volume, float pitch) {
-        return fire(new PlayLevelSoundEvent.AtEntity(entity, name, category, volume, pitch));
+    public static @Nullable PlayLevelSoundEvent.AtEntity onPlaySoundAtEntity(Level level, Entity entity, Holder<SoundEvent> name, SoundSource category, float volume, float pitch) {
+        var event = new PlayLevelSoundEvent.AtEntity(level, entity, name, category, volume, pitch);
+        return PlayLevelSoundEvent.AtEntity.BUS.post(event) ? null : event;
     }
 
     public static PlayLevelSoundEvent.AtPosition onPlaySoundAtPosition(Level level, double x, double y, double z, Holder<SoundEvent> name, SoundSource category, float volume, float pitch) {
-        return fire(new PlayLevelSoundEvent.AtPosition(level, new Vec3(x, y, z), name, category, volume, pitch));
+        var event = new PlayLevelSoundEvent.AtPosition(level, new Vec3(x, y, z), name, category, volume, pitch);
+        return PlayLevelSoundEvent.AtPosition.BUS.post(event) ? null : event;
     }
 
     public static int onItemExpire(ItemEntity entity, @NotNull ItemStack item) {
         if (item.isEmpty()) return -1;
         var event = new ItemExpireEvent(entity, (item.isEmpty() ? 6000 : item.getItem().getEntityLifespan(item, entity.level())));
-        if (!post(event)) return -1;
+        if (!ItemExpireEvent.BUS.post(event)) return -1;
         return event.getExtraLife();
     }
 
     public static int onItemPickup(ItemEntity entityItem, Player player) {
         var event = new EntityItemPickupEvent(player, entityItem);
-        if (post(event)) return -1;
+        if (EntityItemPickupEvent.BUS.post(event)) return -1;
         return event.getResult() == Result.ALLOW ? 1 : 0;
     }
 
     public static boolean canMountEntity(Entity entityMounting, Entity entityBeingMounted, boolean isMounting) {
-        boolean isCanceled = post(new EntityMountEvent(entityMounting, entityBeingMounted, entityMounting.level(), isMounting));
+        boolean isCanceled = EntityMountEvent.BUS.post(new EntityMountEvent(entityMounting, entityBeingMounted, entityMounting.level(), isMounting));
 
-        if(isCanceled) {
+        if (isCanceled) {
             entityMounting.absSnapTo(entityMounting.getX(), entityMounting.getY(), entityMounting.getZ(), entityMounting.yRotO, entityMounting.xRotO);
             return false;
-        } else
+        } else {
             return true;
+        }
     }
 
     public static boolean onAnimalTame(Animal animal, Player tamer) {
-        return post(new AnimalTameEvent(animal, tamer));
+        return AnimalTameEvent.BUS.post(new AnimalTameEvent(animal, tamer));
     }
 
     public static boolean onPlayerPickupXp(Player player, ExperienceOrb orb) {
-        return post(new PlayerXpEvent.PickupXp(player, orb));
+        return PlayerXpEvent.PickupXp.BUS.post(new PlayerXpEvent.PickupXp(player, orb));
     }
 
     public static Player.BedSleepingProblem onPlayerSleepInBed(Player player, Optional<BlockPos> pos) {
-        return fire(new PlayerSleepInBedEvent(player, pos)).getResultStatus();
+        return PlayerSleepInBedEvent.BUS.fire(new PlayerSleepInBedEvent(player, pos)).getResultStatus();
     }
 
     public static void onPlayerWakeup(Player player, boolean wakeImmediately, boolean updateLevel) {
-        post(new PlayerWakeUpEvent(player, wakeImmediately, updateLevel));
+        PlayerWakeUpEvent.BUS.post(new PlayerWakeUpEvent(player, wakeImmediately, updateLevel));
     }
 
     public static void onPlayerFall(Player player, float distance, float multiplier) {
-        post(new PlayerFlyableFallEvent(player, distance, multiplier));
+        PlayerFlyableFallEvent.BUS.post(new PlayerFlyableFallEvent(player, distance, multiplier));
     }
 
     public static boolean onPlayerSpawnSet(ServerPlayer player, ServerPlayer.RespawnConfig config) {
-        return post(new PlayerSetSpawnEvent(player, config));
+        return PlayerSetSpawnEvent.BUS.post(new PlayerSetSpawnEvent(player, config));
     }
 
     public static PlayerSpawnPhantomsEvent onPlayerSpawnPhantom(Player player, int phantomsToSpawn) {
-        return fire(new PlayerSpawnPhantomsEvent(player, phantomsToSpawn));
+        return PlayerSpawnPhantomsEvent.BUS.fire(new PlayerSpawnPhantomsEvent(player, phantomsToSpawn));
     }
 
     public static void onPlayerClone(Player player, Player oldPlayer, boolean wasDeath) {
-        post(new PlayerEvent.Clone(player, oldPlayer, wasDeath));
+        PlayerEvent.Clone.BUS.post(new PlayerEvent.Clone(player, oldPlayer, wasDeath));
     }
 
     public static boolean onExplosionStart(Level level, Explosion explosion) {
-        return post(new ExplosionEvent.Start(level, explosion));
+        return ExplosionEvent.Start.BUS.post(new ExplosionEvent.Start(level, explosion));
     }
 
     public static void onExplosionDetonate(Level level, Explosion explosion, List<BlockPos> blocks, List<Entity> entities, double diameter) {
-        post(new ExplosionEvent.Detonate(level, explosion, blocks, entities));
+        ExplosionEvent.Detonate.BUS.post(new ExplosionEvent.Detonate(level, explosion, blocks, entities));
     }
 
     public static boolean onCreateWorldSpawn(Level level, ServerLevelData settings) {
-        return post(new LevelEvent.CreateSpawnPosition(level, settings));
+        return LevelEvent.CreateSpawnPosition.BUS.post(new LevelEvent.CreateSpawnPosition(level, settings));
     }
 
     public static float onLivingHeal(LivingEntity entity, float amount) {
         var event = new LivingHealEvent(entity, amount);
-        return (post(event) ? 0 : event.getAmount());
+        return LivingHealEvent.BUS.post(event) ? 0 : event.getAmount();
     }
 
     public static boolean onPotionAttemptBrew(NonNullList<ItemStack> stacks) {
@@ -566,7 +549,7 @@ public final class ForgeEventFactory {
             tmp.set(x, stacks.get(x).copy());
 
         var event = new PotionBrewEvent.Pre(tmp);
-        if (post(event)) {
+        if (PotionBrewEvent.Pre.BUS.post(event)) {
             boolean changed = false;
             for (int x = 0; x < stacks.size(); x++) {
                 changed |= ItemStack.matches(tmp.get(x), stacks.get(x));
@@ -580,33 +563,32 @@ public final class ForgeEventFactory {
     }
 
     public static void onPotionBrewed(NonNullList<ItemStack> brewingItemStacks) {
-        post(new PotionBrewEvent.Post(brewingItemStacks));
+        PotionBrewEvent.Post.BUS.post(new PotionBrewEvent.Post(brewingItemStacks));
     }
 
     public static void onPlayerBrewedPotion(Player player, ItemStack stack) {
-        post(new PlayerBrewedPotionEvent(player, stack));
+        PlayerBrewedPotionEvent.BUS.post(new PlayerBrewedPotionEvent(player, stack));
     }
 
-    @Nullable
-    public static <T extends ICapabilityProvider> CapabilityDispatcher gatherCapabilities(Class<? extends T> type, T provider) {
-        return gatherCapabilities(type, provider, null);
-    }
+//    @Nullable
+//    public static <T extends ICapabilityProvider> CapabilityDispatcher gatherCapabilities(Class<? extends T> type, T provider) {
+//        return gatherCapabilities(type, provider, null);
+//    }
 
-    @SuppressWarnings("unchecked")
-    @Nullable
-    public static <T extends ICapabilityProvider> CapabilityDispatcher gatherCapabilities(Class<? extends T> type, T provider, @Nullable ICapabilityProvider parent) {
-        return gatherCapabilities(new AttachCapabilitiesEvent<T>((Class<T>) type, provider), parent);
-    }
+//    @SuppressWarnings("unchecked")
+//    @Nullable
+//    public static <T extends ICapabilityProvider> CapabilityDispatcher gatherCapabilities(Class<? extends T> type, T provider, @Nullable ICapabilityProvider parent) {
+//        return gatherCapabilities(new AttachCapabilitiesEvent<T>((Class<T>) type, provider), parent);
+//    }
 
     @Nullable
-    private static CapabilityDispatcher gatherCapabilities(AttachCapabilitiesEvent<?> event, @Nullable ICapabilityProvider parent) {
-        post(event);
+    public static CapabilityDispatcher gatherCapabilities(AttachCapabilitiesEvent<?> event, @Nullable ICapabilityProvider parent) {
         return !event.getCapabilities().isEmpty() || parent != null ? new CapabilityDispatcher(event.getCapabilities(), event.getListeners(), parent) : null;
     }
 
     public static boolean fireSleepingLocationCheck(LivingEntity player, BlockPos sleepingLocation) {
         var evt = new SleepingLocationCheckEvent(player, sleepingLocation);
-        post(evt);
+        SleepingLocationCheckEvent.BUS.post(evt);
 
         Result canContinueSleep = evt.getResult();
         if (canContinueSleep == Result.DEFAULT)
@@ -617,7 +599,7 @@ public final class ForgeEventFactory {
 
     public static boolean onSleepingTimeCheck(Player player, Optional<BlockPos> sleepingLocation) {
         var evt = new SleepingTimeCheckEvent(player, sleepingLocation);
-        post(evt);
+        SleepingTimeCheckEvent.BUS.post(evt);
 
         var canContinueSleep = evt.getResult();
         if (canContinueSleep == Result.DEFAULT)
@@ -628,20 +610,20 @@ public final class ForgeEventFactory {
 
     public static InteractionResult onArrowNock(ItemStack item, Level level, Player player, InteractionHand hand, boolean hasAmmo) {
         var event = new ArrowNockEvent(player, item, hand, level, hasAmmo);
-        if (post(event))
+        if (ArrowNockEvent.BUS.post(event))
             return InteractionResult.FAIL;
         return event.getAction();
     }
 
     public static int onArrowLoose(ItemStack stack, Level level, Player player, int charge, boolean hasAmmo) {
         var event = new ArrowLooseEvent(player, stack, level, charge, hasAmmo);
-        if (post(event))
+        if (ArrowLooseEvent.BUS.post(event))
             return -1;
         return event.getCharge();
     }
 
     public static ProjectileImpactEvent.ImpactResult onProjectileImpactResult(Projectile projectile, HitResult ray) {
-        return fire(new ProjectileImpactEvent(projectile, ray)).getImpactResult();
+        return ProjectileImpactEvent.BUS.fire(new ProjectileImpactEvent(projectile, ray)).getImpactResult();
     }
 
     public static boolean onProjectileImpact(Projectile projectile, HitResult ray) {
@@ -650,333 +632,330 @@ public final class ForgeEventFactory {
 
     public static @Nullable LootTable onLoadLootTable(ResourceLocation name, LootTable table) {
         var event = new LootTableLoadEvent(name, table);
-        return post(event) ? null : event.getTable();
+        return LootTableLoadEvent.BUS.post(event) ? null : event.getTable();
     }
 
     public static boolean canCreateFluidSource(Level level, BlockPos pos, BlockState state, boolean def) {
-        var result = fire(new CreateFluidSourceEvent(level, pos, state)).getResult();
+        var result = CreateFluidSourceEvent.BUS.fire(new CreateFluidSourceEvent(level, pos, state)).getResult();
         return result == Result.DEFAULT ? def : result == Result.ALLOW;
     }
 
     public static Optional<PortalShape> onTrySpawnPortal(LevelAccessor level, BlockPos pos, Optional<PortalShape> size) {
-        if (!size.isPresent()) return size;
-        return !post(new BlockEvent.PortalSpawnEvent(level, pos, level.getBlockState(pos), size.get())) ? size : Optional.empty();
+        if (size.isEmpty()) return size;
+        return BlockEvent.PortalSpawnEvent.BUS.post(new BlockEvent.PortalSpawnEvent(level, pos, level.getBlockState(pos), size.get())) ? Optional.empty() : size;
     }
 
     public static int onEnchantmentLevelSet(Level level, BlockPos pos, int enchantRow, int power, ItemStack itemStack, int enchantmentLevel) {
-        return fire(new EnchantmentLevelSetEvent(level, pos, enchantRow, power, itemStack, enchantmentLevel)).getEnchantLevel();
+        return EnchantmentLevelSetEvent.BUS.fire(new EnchantmentLevelSetEvent(level, pos, enchantRow, power, itemStack, enchantmentLevel)).getEnchantLevel();
     }
 
     public static boolean onEntityDestroyBlock(LivingEntity entity, BlockPos pos, BlockState state) {
-        return !post(new LivingDestroyBlockEvent(entity, pos, state));
+        return !LivingDestroyBlockEvent.BUS.post(new LivingDestroyBlockEvent(entity, pos, state));
     }
 
     public static boolean getMobGriefingEvent(ServerLevel level, @Nullable Entity entity) {
         if (entity == null)
             return level.getGameRules().getBoolean(GameRules.RULE_MOBGRIEFING);
 
-        var result = fire(new EntityMobGriefingEvent(entity)).getResult();
+        var result = EntityMobGriefingEvent.BUS.fire(new EntityMobGriefingEvent(entity)).getResult();
         return result == Result.DEFAULT ? level.getGameRules().getBoolean(GameRules.RULE_MOBGRIEFING) : result == Result.ALLOW;
     }
 
     @SuppressWarnings("removal")
     public static SaplingGrowTreeEvent blockGrowFeature(LevelAccessor level, RandomSource randomSource, BlockPos pos, @Nullable Holder<ConfiguredFeature<?, ?>> holder) {
-        return fire(new SaplingGrowTreeEvent(level, randomSource, pos, holder));
+        return SaplingGrowTreeEvent.BUS.fire(new SaplingGrowTreeEvent(level, randomSource, pos, holder));
     }
 
     public static BlockState alterGround(LevelSimulatedReader level, RandomSource random, BlockPos pos, BlockState altered) {
-        return fire(new AlterGroundEvent(level, random, pos, altered)).getNewAlteredState();
+        return AlterGroundEvent.BUS.fire(new AlterGroundEvent(level, random, pos, altered)).getNewAlteredState();
     }
 
     public static void fireChunkTicketLevelUpdated(ServerLevel level, long chunkPos, int oldTicketLevel, int newTicketLevel, @Nullable ChunkHolder chunkHolder) {
         if (oldTicketLevel != newTicketLevel)
-            post(new ChunkTicketLevelUpdatedEvent(level, chunkPos, oldTicketLevel, newTicketLevel, chunkHolder));
+            ChunkTicketLevelUpdatedEvent.BUS.post(new ChunkTicketLevelUpdatedEvent(level, chunkPos, oldTicketLevel, newTicketLevel, chunkHolder));
     }
 
     public static void fireChunkWatch(ServerPlayer entity, LevelChunk chunk, ServerLevel level) {
-        post(new ChunkWatchEvent.Watch(entity, chunk, level));
+        ChunkWatchEvent.Watch.BUS.post(new ChunkWatchEvent.Watch(entity, chunk, level));
     }
 
     public static void fireChunkUnWatch(ServerPlayer entity, ChunkPos chunkpos, ServerLevel level) {
-        post(new ChunkWatchEvent.UnWatch(entity, chunkpos, level));
+        ChunkWatchEvent.UnWatch.BUS.post(new ChunkWatchEvent.UnWatch(entity, chunkpos, level));
     }
 
     public static boolean onPistonMovePre(Level level, BlockPos pos, Direction direction, boolean extending) {
-        return post(new PistonEvent.Pre(level, pos, direction, extending ? PistonEvent.PistonMoveType.EXTEND : PistonEvent.PistonMoveType.RETRACT));
+        return PistonEvent.Pre.BUS.post(new PistonEvent.Pre(level, pos, direction, extending ? PistonEvent.PistonMoveType.EXTEND : PistonEvent.PistonMoveType.RETRACT));
     }
 
     public static boolean onPistonMovePost(Level level, BlockPos pos, Direction direction, boolean extending) {
-        return post(new PistonEvent.Post(level, pos, direction, extending ? PistonEvent.PistonMoveType.EXTEND : PistonEvent.PistonMoveType.RETRACT));
+        return PistonEvent.Post.BUS.post(new PistonEvent.Post(level, pos, direction, extending ? PistonEvent.PistonMoveType.EXTEND : PistonEvent.PistonMoveType.RETRACT));
     }
 
     public static long onSleepFinished(ServerLevel level, long newTime, long minTime) {
-        return fire(new SleepFinishedTimeEvent(level, newTime, minTime)).getNewTime();
+        return SleepFinishedTimeEvent.BUS.fire(new SleepFinishedTimeEvent(level, newTime, minTime)).getNewTime();
     }
 
     @Deprecated(forRemoval = true, since = "1.21.4")
     public static List<PreparableReloadListener> onResourceReload(ReloadableServerResources serverResources, RegistryAccess registryAccess) {
-        return fire(new AddReloadListenerEvent(serverResources, registryAccess)).getListeners();
+        return AddReloadListenerEvent.BUS.fire(new AddReloadListenerEvent(serverResources, registryAccess)).getListeners();
     }
 
     public static List<PreparableReloadListener> onResourceReload(ReloadableServerResources serverResources, HolderLookup.Provider lookupProvider, @Deprecated(forRemoval = true, since = "1.21.4") RegistryAccess registryAccess) {
-        return fire(new AddReloadListenerEvent(serverResources, lookupProvider, registryAccess)).getListeners();
+        return AddReloadListenerEvent.BUS.fire(new AddReloadListenerEvent(serverResources, lookupProvider, registryAccess)).getListeners();
     }
 
     public static void onCommandRegister(CommandDispatcher<CommandSourceStack> dispatcher, Commands.CommandSelection environment, CommandBuildContext context) {
-        post(new RegisterCommandsEvent(dispatcher, environment, context));
+        RegisterCommandsEvent.BUS.post(new RegisterCommandsEvent(dispatcher, environment, context));
     }
 
     public static boolean canLivingConvert(LivingEntity entity, EntityType<? extends LivingEntity> outcome, Consumer<Integer> timer) {
-        return !post(new LivingConversionEvent.Pre(entity, outcome, timer));
+        return !LivingConversionEvent.Pre.BUS.post(new LivingConversionEvent.Pre(entity, outcome, timer));
     }
 
     public static void onLivingConvert(LivingEntity entity, LivingEntity outcome) {
-        post(new LivingConversionEvent.Post(entity, outcome));
+        LivingConversionEvent.Post.BUS.post(new LivingConversionEvent.Post(entity, outcome));
     }
 
-    public static BabyEntitySpawnEvent onBabySpawn(Mob parentA, Mob parentB, @Nullable AgeableMob proposedChild) {
-        return fire(new BabyEntitySpawnEvent(parentA, parentB, proposedChild));
-
+    public static @Nullable EntityTeleportEvent.TeleportCommand onEntityTeleportCommand(Entity entity, double targetX, double targetY, double targetZ) {
+        var event = new EntityTeleportEvent.TeleportCommand(entity, targetX, targetY, targetZ);
+        return EntityTeleportEvent.TeleportCommand.BUS.post(event) ? null : event;
     }
 
-    public static EntityTeleportEvent.TeleportCommand onEntityTeleportCommand(Entity entity, double targetX, double targetY, double targetZ) {
-        return fire(new EntityTeleportEvent.TeleportCommand(entity, targetX, targetY, targetZ));
+    public static @Nullable EntityTeleportEvent.SpreadPlayersCommand onEntityTeleportSpreadPlayersCommand(Entity entity, double targetX, double targetY, double targetZ) {
+        var event = new EntityTeleportEvent.SpreadPlayersCommand(entity, targetX, targetY, targetZ);
+        return EntityTeleportEvent.SpreadPlayersCommand.BUS.post(event) ? null : event;
     }
 
-    public static EntityTeleportEvent.SpreadPlayersCommand onEntityTeleportSpreadPlayersCommand(Entity entity, double targetX, double targetY, double targetZ) {
-        return fire(new EntityTeleportEvent.SpreadPlayersCommand(entity, targetX, targetY, targetZ));
+    public static @Nullable EntityTeleportEvent.EnderEntity onEnderManTeleport(LivingEntity entity, double targetX, double targetY, double targetZ) {
+        var event = new EntityTeleportEvent.EnderEntity(entity, targetX, targetY, targetZ);
+        return EntityTeleportEvent.EnderEntity.BUS.post(event) ? null : event;
     }
 
-    public static EntityTeleportEvent.EnderEntity onEnderTeleport(LivingEntity entity, double targetX, double targetY, double targetZ) {
-        return fire(new EntityTeleportEvent.EnderEntity(entity, targetX, targetY, targetZ));
-    }
-
-    public static EntityTeleportEvent.EnderPearl onEnderPearlLand(ServerPlayer entity, double targetX, double targetY, double targetZ, ThrownEnderpearl pearlEntity, float attackDamage, HitResult hitResult) {
-        return fire(new EntityTeleportEvent.EnderPearl(entity, targetX, targetY, targetZ, pearlEntity, attackDamage, hitResult));
+    public static @Nullable EntityTeleportEvent.EnderPearl onEnderPearlLand(ServerPlayer entity, double targetX, double targetY, double targetZ, ThrownEnderpearl pearlEntity, float attackDamage, HitResult hitResult) {
+        var event = new EntityTeleportEvent.EnderPearl(entity, targetX, targetY, targetZ, pearlEntity, attackDamage, hitResult);
+        return EntityTeleportEvent.EnderPearl.BUS.post(event) ? null : event;
     }
 
     public static EntityTeleportEvent.ChorusFruit onChorusFruitTeleport(LivingEntity entity, double targetX, double targetY, double targetZ) {
-        return fire(new EntityTeleportEvent.ChorusFruit(entity, targetX, targetY, targetZ));
+        return EntityTeleportEvent.ChorusFruit.BUS.fire(new EntityTeleportEvent.ChorusFruit(entity, targetX, targetY, targetZ));
     }
 
     public static boolean onPermissionChanged(GameProfile gameProfile, int newLevel, PlayerList playerList) {
         var oldLevel = playerList.getServer().getProfilePermissions(gameProfile);
         var player = playerList.getPlayer(gameProfile.getId());
         if (newLevel != oldLevel && player != null)
-            return post(new PermissionsChangedEvent(player, newLevel, oldLevel));
+            return PermissionsChangedEvent.BUS.post(new PermissionsChangedEvent(player, newLevel, oldLevel));
         return false;
     }
 
     public static void onPlayerChangedDimension(Player player, ResourceKey<Level> fromDim, ResourceKey<Level> toDim) {
-        post(new PlayerEvent.PlayerChangedDimensionEvent(player, fromDim, toDim));
+        PlayerEvent.PlayerChangedDimensionEvent.BUS.post(new PlayerEvent.PlayerChangedDimensionEvent(player, fromDim, toDim));
     }
 
     public static void firePlayerLoggedIn(Player player) {
-        post(new PlayerEvent.PlayerLoggedInEvent(player));
+        PlayerEvent.PlayerLoggedInEvent.BUS.post(new PlayerEvent.PlayerLoggedInEvent(player));
     }
 
     public static void firePlayerLoggedOut(Player player) {
-        post(new PlayerEvent.PlayerLoggedOutEvent(player));
+        PlayerEvent.PlayerLoggedOutEvent.BUS.post(new PlayerEvent.PlayerLoggedOutEvent(player));
     }
 
     public static void firePlayerRespawnEvent(Player player, boolean endConquered) {
-        post(new PlayerEvent.PlayerRespawnEvent(player, endConquered));
+        PlayerEvent.PlayerRespawnEvent.BUS.post(new PlayerEvent.PlayerRespawnEvent(player, endConquered));
     }
 
     public static void firePlayerItemPickupEvent(Player player, ItemEntity item, ItemStack clone) {
-        post(new PlayerEvent.ItemPickupEvent(player, item, clone));
+        PlayerEvent.ItemPickupEvent.BUS.post(new PlayerEvent.ItemPickupEvent(player, item, clone));
     }
 
     public static void firePlayerCraftingEvent(Player player, ItemStack crafted, Container craftMatrix) {
-        post(new PlayerEvent.ItemCraftedEvent(player, crafted, craftMatrix));
+        PlayerEvent.ItemCraftedEvent.BUS.post(new PlayerEvent.ItemCraftedEvent(player, crafted, craftMatrix));
     }
 
     public static void firePlayerSmeltedEvent(Player player, ItemStack smelted) {
-        post(new PlayerEvent.ItemSmeltedEvent(player, smelted));
+        PlayerEvent.ItemSmeltedEvent.BUS.post(new PlayerEvent.ItemSmeltedEvent(player, smelted));
     }
 
     public static void onPlayerPreTick(Player player) {
-        post(new TickEvent.PlayerTickEvent.Pre(player));
+        TickEvent.PlayerTickEvent.Pre.BUS.post(new TickEvent.PlayerTickEvent.Pre(player));
     }
 
     public static void onPlayerPostTick(Player player) {
-        post(new TickEvent.PlayerTickEvent.Post(player));
+        TickEvent.PlayerTickEvent.Post.BUS.post(new TickEvent.PlayerTickEvent.Post(player));
     }
 
     public static void onPreLevelTick(Level level, BooleanSupplier haveTime) {
-        post(new TickEvent.LevelTickEvent.Pre(level.isClientSide ? LogicalSide.CLIENT : LogicalSide.SERVER, level, haveTime));
+        TickEvent.LevelTickEvent.Pre.BUS.post(new TickEvent.LevelTickEvent.Pre(level.isClientSide ? LogicalSide.CLIENT : LogicalSide.SERVER, level, haveTime));
     }
 
     public static void onPostLevelTick(Level level, BooleanSupplier haveTime) {
-        post(new TickEvent.LevelTickEvent.Post(level.isClientSide ? LogicalSide.CLIENT : LogicalSide.SERVER, level, haveTime));
+        TickEvent.LevelTickEvent.Post.BUS.post(new TickEvent.LevelTickEvent.Post(level.isClientSide ? LogicalSide.CLIENT : LogicalSide.SERVER, level, haveTime));
     }
 
     public static void onPreClientTick() {
-        post(new TickEvent.ClientTickEvent.Pre());
+        TickEvent.ClientTickEvent.Pre.BUS.post(TickEvent.ClientTickEvent.Pre.INSTANCE);
     }
 
     public static void onPostClientTick() {
-        post(new TickEvent.ClientTickEvent.Post());
+        TickEvent.ClientTickEvent.Post.BUS.post(TickEvent.ClientTickEvent.Post.INSTANCE);
     }
 
     public static void onPreServerTick(BooleanSupplier haveTime, MinecraftServer server) {
-        post(new TickEvent.ServerTickEvent.Pre(haveTime, server));
+        TickEvent.ServerTickEvent.Pre.BUS.post(new TickEvent.ServerTickEvent.Pre(haveTime, server));
     }
 
     public static void onPostServerTick(BooleanSupplier haveTime, MinecraftServer server) {
-        post(new TickEvent.ServerTickEvent.Post(haveTime, server));
+        TickEvent.ServerTickEvent.Post.BUS.post(new TickEvent.ServerTickEvent.Post(haveTime, server));
     }
 
     public static WeightedList<MobSpawnSettings.SpawnerData> getPotentialSpawns(LevelAccessor level, MobCategory category, BlockPos pos, WeightedList<MobSpawnSettings.SpawnerData> oldList) {
-        LevelEvent.PotentialSpawns event = new LevelEvent.PotentialSpawns(level, category, pos, oldList);
-        if (post(event))
+        var event = new LevelEvent.PotentialSpawns(level, category, pos, oldList);
+        if (LevelEvent.PotentialSpawns.BUS.post(event))
             return WeightedList.of();
         //System.out.println("List: " + oldList.unwrap() + " " + event.getSpawnerDataList());
         return WeightedList.of(event.getSpawnerDataList());
     }
 
     public static void onAdvancementEarned(Player player, AdvancementHolder holder) {
-        post(new AdvancementEarnEvent(player, holder));
+        AdvancementEarnEvent.BUS.post(new AdvancementEarnEvent(player, holder));
     }
 
     public static void onAdvancementGrant(Player player, AdvancementHolder holder, AdvancementProgress advancementProgress, String criterion) {
-        post(new AdvancementProgressEvent(player, holder, advancementProgress, criterion, ProgressType.GRANT));
+        AdvancementProgressEvent.BUS.post(new AdvancementProgressEvent(player, holder, advancementProgress, criterion, ProgressType.GRANT));
     }
 
     public static void onAdvancementRevoke(Player player, AdvancementHolder holder, AdvancementProgress advancementProgress, String criterion) {
-        post(new AdvancementProgressEvent(player, holder, advancementProgress, criterion, ProgressType.REVOKE));
+        AdvancementProgressEvent.BUS.post(new AdvancementProgressEvent(player, holder, advancementProgress, criterion, ProgressType.REVOKE));
     }
 
     public static void onEntityConstructing(Entity entity) {
-        post(new EntityEvent.EntityConstructing(entity));
+        EntityEvent.EntityConstructing.BUS.post(new EntityEvent.EntityConstructing(entity));
     }
 
     public static void onPlayerOpenContainer(ServerPlayer player, AbstractContainerMenu menu) {
-        post(new PlayerContainerEvent.Open(player, menu));
+        PlayerContainerEvent.Open.BUS.post(new PlayerContainerEvent.Open(player, menu));
     }
 
     public static void onPlayerCloseContainer(ServerPlayer player, AbstractContainerMenu menu) {
-        post(new PlayerContainerEvent.Close(player, menu));
+        PlayerContainerEvent.Close.BUS.post(new PlayerContainerEvent.Close(player, menu));
     }
 
     public static boolean onTravelToDimension(Entity entity, ResourceKey<Level> dimension) {
-        return post(new EntityTravelToDimensionEvent(entity, dimension));
+        return EntityTravelToDimensionEvent.BUS.post(new EntityTravelToDimensionEvent(entity, dimension));
     }
 
     public static void onChunkUnload(ChunkAccess chunk) {
-        post(new ChunkEvent.Unload(chunk));
+        ChunkEvent.Unload.BUS.post(new ChunkEvent.Unload(chunk));
     }
 
     public static void onChunkLoad(ChunkAccess chunk, boolean newChunk) {
-        post(new ChunkEvent.Load(chunk, newChunk));
+        ChunkEvent.Load.BUS.post(new ChunkEvent.Load(chunk, newChunk));
     }
 
     public static void onLevelUnload(Level level) {
-         post(new LevelEvent.Unload(level));
+        LevelEvent.Unload.BUS.post(new LevelEvent.Unload(level));
     }
 
     public static void onLevelLoad(Level level) {
-         post(new LevelEvent.Load(level));
+        LevelEvent.Load.BUS.post(new LevelEvent.Load(level));
     }
 
     public static void onLevelSave(Level level) {
-        post(new LevelEvent.Save(level));
+        LevelEvent.Save.BUS.post(new LevelEvent.Save(level));
     }
 
     public static void onChunkDataSave(ChunkAccess chunk, LevelAccessor world, SerializableChunkData data) {
-        post(new ChunkDataEvent.Save(chunk, world, data));
+        ChunkDataEvent.Save.BUS.post(new ChunkDataEvent.Save(chunk, world, data));
     }
 
     public static void onChunkDataLoad(ChunkAccess chunk, SerializableChunkData data, ChunkType status) {
-        post(new ChunkDataEvent.Load(chunk, data, status));
+        ChunkDataEvent.Load.BUS.post(new ChunkDataEvent.Load(chunk, data, status));
     }
 
     public static void onGameShuttingDown() {
-        post(new GameShuttingDownEvent());
+        GameShuttingDownEvent.BUS.post(new GameShuttingDownEvent());
     }
 
     public static void gatherLoginConfigTasks(Connection connection, Consumer<ConfigurationTask> add) {
-        post(new GatherLoginConfigurationTasksEvent(connection, add));
+        GatherLoginConfigurationTasksEvent.BUS.post(new GatherLoginConfigurationTasksEvent(connection, add));
     }
 
     public static void onConnectionStart(Connection connection) {
-        post(new ConnectionStartEvent(connection));
+        ConnectionStartEvent.BUS.post(new ConnectionStartEvent(connection));
     }
 
     public static void onChannelRegistrationChange(Connection connection, ChannelRegistrationChangeEvent.Type changeType, HashSet<ResourceLocation> changed) {
-        post(new ChannelRegistrationChangeEvent(connection, changeType, changed));
+        ChannelRegistrationChangeEvent.BUS.post(new ChannelRegistrationChangeEvent(connection, changeType, changed));
     }
 
-    public static LivingSwapItemsEvent.Hands onLivingSwapHandItems(LivingEntity entity) {
-        return fire(new LivingSwapItemsEvent.Hands(entity));
+    public static @Nullable LivingSwapItemsEvent.Hands onLivingSwapHandItems(LivingEntity entity) {
+        var event = new LivingSwapItemsEvent.Hands(entity);
+        return LivingSwapItemsEvent.Hands.BUS.post(event) ? null : event;
     }
 
-    public static ShieldBlockEvent onShieldBlock(LivingEntity blocker, DamageSource source, float blocked, ItemStack blockedWith) {
-        return fire(new ShieldBlockEvent(blocker, source, blocked, blockedWith));
+    public static @Nullable ShieldBlockEvent onShieldBlock(LivingEntity blocker, DamageSource source, float blocked, ItemStack blockedWith) {
+        var event = new ShieldBlockEvent(blocker, source, blocked, blockedWith);
+        return ShieldBlockEvent.BUS.post(event) ? null : event;
     }
 
     public static void onEntityEnterSection(Entity entity, long packedOldPos, long packedNewPos) {
-        post(new EntityEvent.EnteringSection(entity, packedOldPos, packedNewPos));
+        EntityEvent.EnteringSection.BUS.post(new EntityEvent.EnteringSection(entity, packedOldPos, packedNewPos));
     }
 
     public static boolean onLivingTick(LivingEntity entity) {
-        return post(new LivingEvent.LivingTickEvent(entity));
+        return LivingEvent.LivingTickEvent.BUS.post(new LivingEvent.LivingTickEvent(entity));
     }
 
-    public static LivingFallEvent onLivingFall(LivingEntity entity, double distance, float damageMultiplier) {
-        return fire(new LivingFallEvent(entity, distance, damageMultiplier));
+    public static @Nullable LivingFallEvent onLivingFall(LivingEntity entity, double distance, float damageMultiplier) {
+        var event = new LivingFallEvent(entity, distance, damageMultiplier);
+        return LivingFallEvent.BUS.post(event) ? null : event;
     }
 
     public static LivingBreatheEvent onLivingBreathe(LivingEntity entity, boolean canBreathe, int consumeAirAmount, int refillAirAmount, boolean canRefillAir) {
-        return fire(new LivingBreatheEvent(entity, canBreathe, consumeAirAmount, refillAirAmount, canRefillAir));
+        return LivingBreatheEvent.BUS.fire(new LivingBreatheEvent(entity, canBreathe, consumeAirAmount, refillAirAmount, canRefillAir));
     }
 
     public static LivingDrownEvent onLivingDrown(LivingEntity entity, boolean isDrowning, float damageAmount, int bubbleCount) {
-        return fire(new LivingDrownEvent(entity, isDrowning, damageAmount, bubbleCount));
+        return LivingDrownEvent.BUS.fire(new LivingDrownEvent(entity, isDrowning, damageAmount, bubbleCount));
     }
 
-    public static LivingKnockBackEvent onLivingKnockBack(LivingEntity target, float strength, double ratioX, double ratioZ) {
-        return fire(new LivingKnockBackEvent(target, strength, ratioX, ratioZ));
+    public static @Nullable LivingKnockBackEvent onLivingKnockBack(LivingEntity target, float strength, double ratioX, double ratioZ) {
+        var event = new LivingKnockBackEvent(target, strength, ratioX, ratioZ);
+        return LivingKnockBackEvent.BUS.post(event) ? null : event;
     }
 
     public static boolean onLivingDeath(LivingEntity entity, DamageSource src) {
-        return post(new LivingDeathEvent(entity, src));
+        return LivingDeathEvent.BUS.post(new LivingDeathEvent(entity, src));
     }
 
     public static boolean onLivingDrops(LivingEntity entity, DamageSource source, Collection<ItemEntity> drops, boolean recentlyHit) {
-        return post(new LivingDropsEvent(entity, source, drops, recentlyHit));
+        return LivingDropsEvent.BUS.post(new LivingDropsEvent(entity, source, drops, recentlyHit));
     }
 
     public static void onLeftClickEmpty(Player player) {
-        post(new PlayerInteractEvent.LeftClickEmpty(player));
+        PlayerInteractEvent.LeftClickEmpty.BUS.post(new PlayerInteractEvent.LeftClickEmpty(player));
     }
 
-    public static PlayerInteractEvent.LeftClickBlock onLeftClickBlock(Player player, BlockPos pos, Direction face, ServerboundPlayerActionPacket.Action action) {
-        return fire(new PlayerInteractEvent.LeftClickBlock(player, pos, face, PlayerInteractEvent.LeftClickBlock.Action.convert(action)));
+    public static @Nullable PlayerInteractEvent.LeftClickBlock onLeftClickBlock(Player player, BlockPos pos, Direction face, ServerboundPlayerActionPacket.Action action) {
+        var event = new PlayerInteractEvent.LeftClickBlock(player, pos, face, PlayerInteractEvent.LeftClickBlock.Action.convert(action));
+        return PlayerInteractEvent.LeftClickBlock.BUS.post(event) ? null : event;
+    }
+
+    public static boolean isLeftClickBlockCancelled(Player player, BlockPos pos, Direction face, ServerboundPlayerActionPacket.Action action) {
+        return PlayerInteractEvent.LeftClickBlock.BUS.post(new PlayerInteractEvent.LeftClickBlock(player, pos, face, PlayerInteractEvent.LeftClickBlock.Action.convert(action)));
     }
 
     public static PlayerInteractEvent.LeftClickBlock onLeftClickBlockHold(Player player, BlockPos pos, Direction face) {
-        return fire(new PlayerInteractEvent.LeftClickBlock(player, pos, face, PlayerInteractEvent.LeftClickBlock.Action.CLIENT_HOLD));
-    }
-
-    public static PlayerInteractEvent.RightClickBlock onRightClickBlock(Player player, InteractionHand hand, BlockPos pos, BlockHitResult hitVec) {
-        return fire(new PlayerInteractEvent.RightClickBlock(player, hand, pos, hitVec));
-    }
-
-    public static PlayerInteractEvent.RightClickItem onRightClickItem(Player player, InteractionHand hand) {
-        return fire(new PlayerInteractEvent.RightClickItem(player, hand));
-    }
-
-    public static PlayerInteractEvent.EntityInteract onEntityInteract(Player player, Entity entity, InteractionHand hand) {
-        return fire(new PlayerInteractEvent.EntityInteract(player, hand, entity));
-    }
-
-    public static PlayerInteractEvent.EntityInteractSpecific onEntityInteractSpecific(Player player, Entity entity, InteractionHand hand, Vec3 vec3d) {
-        return fire(new PlayerInteractEvent.EntityInteractSpecific(player, hand, entity, vec3d));
+        var event = new PlayerInteractEvent.LeftClickBlock(player, pos, face, PlayerInteractEvent.LeftClickBlock.Action.CLIENT_HOLD);
+        if (PlayerInteractEvent.LeftClickBlock.BUS.post(event)) {
+            event.setUseBlock(Result.DENY);
+            event.setUseItem(Result.DENY);
+        }
+        return event;
     }
 
     public static void onRightClickEmpty(Player player, InteractionHand hand) {
-        post(new PlayerInteractEvent.RightClickEmpty(player, hand));
+        PlayerInteractEvent.RightClickEmpty.BUS.post(new PlayerInteractEvent.RightClickEmpty(player, hand));
     }
 
     // TODO: Remove from mod bus - Lex 04222024
@@ -985,110 +964,112 @@ public final class ForgeEventFactory {
     }
 
     public static boolean onEntityJoinLevel(Entity entity, Level level) {
-        return post(new EntityJoinLevelEvent(entity, level));
+        return EntityJoinLevelEvent.BUS.post(new EntityJoinLevelEvent(entity, level));
     }
     public static boolean onEntityJoinLevel(Entity entity, Level level, boolean loadedFromDisk) {
-        return post(new EntityJoinLevelEvent(entity, level, loadedFromDisk));
+        return EntityJoinLevelEvent.BUS.post(new EntityJoinLevelEvent(entity, level, loadedFromDisk));
     }
 
     public static boolean onEntityLeaveLevel(Entity entity, Level level) {
-        return post(new EntityLeaveLevelEvent(entity, level));
+        return EntityLeaveLevelEvent.BUS.post(new EntityLeaveLevelEvent(entity, level));
     }
 
     public static void onDifficultyChange(Difficulty difficulty, Difficulty oldDifficulty) {
-        post(new DifficultyChangeEvent(difficulty, oldDifficulty));
+        DifficultyChangeEvent.BUS.post(new DifficultyChangeEvent(difficulty, oldDifficulty));
     }
 
     public static void onTagsUpdated(RegistryAccess registryAccess, boolean fromClientPacket, boolean isIntegratedServerConnection) {
-        post(new TagsUpdatedEvent(registryAccess, fromClientPacket, isIntegratedServerConnection));
+        TagsUpdatedEvent.BUS.post(new TagsUpdatedEvent(registryAccess, fromClientPacket, isIntegratedServerConnection));
     }
 
     public static boolean onLivingAttackEntity(LivingEntity entity, DamageSource src, float amount) {
-        return post(new LivingAttackEvent(entity, src, amount));
+        return LivingAttackEvent.BUS.post(new LivingAttackEvent(entity, src, amount));
     }
 
     public static boolean onVanillaGameEvent(Level level, Holder<GameEvent> vanillaEvent, Vec3 pos, GameEvent.Context context) {
-        return post(new VanillaGameEvent(level, vanillaEvent.get(), pos, context));
+        return VanillaGameEvent.BUS.post(new VanillaGameEvent(level, vanillaEvent.get(), pos, context));
     }
 
     public static boolean onLivingEffectExpire(LivingEntity entity, MobEffectInstance effect) {
-        return post(new MobEffectEvent.Expired(entity, effect));
+        return MobEffectEvent.Expired.BUS.post(new MobEffectEvent.Expired(entity, effect));
     }
 
     public static boolean onLivingEffectAdd(LivingEntity entity, MobEffectInstance oldEffect, MobEffectInstance newEffect, Entity source) {
-        return post(new MobEffectEvent.Added(entity, oldEffect, newEffect, source));
+        return MobEffectEvent.Added.BUS.post(new MobEffectEvent.Added(entity, oldEffect, newEffect, source));
     }
 
     public static boolean onLivingEffectRemove(LivingEntity entity, MobEffect effect) {
-        return post(new MobEffectEvent.Remove(entity, effect));
+        return MobEffectEvent.Remove.BUS.post(new MobEffectEvent.Remove(entity, effect));
     }
 
     public static boolean onLivingEffectRemove(LivingEntity entity, MobEffectInstance effect) {
-        return post(new MobEffectEvent.Remove(entity, effect));
+        return MobEffectEvent.Remove.BUS.post(new MobEffectEvent.Remove(entity, effect));
     }
 
     public static MobEffectEvent.Applicable onLivingEffectCanApply(LivingEntity entity, MobEffectInstance effect) {
-        return fire(new MobEffectEvent.Applicable(entity, effect));
+        return MobEffectEvent.Applicable.BUS.fire(new MobEffectEvent.Applicable(entity, effect));
     }
 
     public static void onLivingEquipmentChange(LivingEntity entity, EquipmentSlot slot, ItemStack from, ItemStack to) {
-        fire(new LivingEquipmentChangeEvent(entity, slot, from, to));
+        LivingEquipmentChangeEvent.BUS.post(new LivingEquipmentChangeEvent(entity, slot, from, to));
     }
 
-    public static LivingChangeTargetEvent onLivingChangeTargetMob(LivingEntity entity, LivingEntity originalTarget) {
-        return fire(new LivingChangeTargetEvent(entity, originalTarget, LivingChangeTargetEvent.LivingTargetType.MOB_TARGET));
+    public static @Nullable LivingChangeTargetEvent onLivingChangeTargetMob(LivingEntity entity, LivingEntity originalTarget) {
+        var event = new LivingChangeTargetEvent(entity, originalTarget, LivingChangeTargetEvent.LivingTargetType.MOB_TARGET);
+        return LivingChangeTargetEvent.BUS.post(event) ? null : event;
     }
 
-    public static LivingChangeTargetEvent onLivingChangeTargetBehavior(LivingEntity entity, LivingEntity originalTarget) {
-        return fire(new LivingChangeTargetEvent(entity, originalTarget, LivingChangeTargetEvent.LivingTargetType.BEHAVIOR_TARGET));
+    public static @Nullable LivingChangeTargetEvent onLivingChangeTargetBehavior(LivingEntity entity, LivingEntity originalTarget) {
+        var event = new LivingChangeTargetEvent(entity, originalTarget, LivingChangeTargetEvent.LivingTargetType.BEHAVIOR_TARGET);
+        return LivingChangeTargetEvent.BUS.post(event) ? null : event;
     }
 
-    public static ItemFishedEvent onPlayerFishedItem(List<ItemStack> stacks, int rodDamage, FishingHook hook) {
-        return fire(new ItemFishedEvent(stacks, rodDamage, hook));
+    public static @Nullable PlayerXpEvent.XpChange onPlayerXpChange(Player player, int xp) {
+        var event = new PlayerXpEvent.XpChange(player, xp);
+        return PlayerXpEvent.XpChange.BUS.post(event) ? null : event;
     }
 
-    public static PlayerXpEvent.XpChange onPlayerXpChange(Player player, int xp) {
-        return fire(new PlayerXpEvent.XpChange(player, xp));
-    }
-
-    public static PlayerXpEvent.LevelChange onPlayerLevelChange(Player player, int levels) {
-        return fire(new PlayerXpEvent.LevelChange(player, levels));
+    public static @Nullable PlayerXpEvent.LevelChange onPlayerLevelChange(Player player, int levels) {
+        var event = new PlayerXpEvent.LevelChange(player, levels);
+        return PlayerXpEvent.LevelChange.BUS.post(event) ? null : event;
     }
 
 
-    public static GrindstoneEvent.OnPlaceItem onGrindstoneChange(@NotNull ItemStack top, @NotNull ItemStack bottom, Container outputSlot, int xp) {
-        return fire(new GrindstoneEvent.OnPlaceItem(top, bottom, xp));
+    public static @Nullable GrindstoneEvent.OnPlaceItem onGrindstoneChange(@NotNull ItemStack top, @NotNull ItemStack bottom, Container outputSlot, int xp) {
+        var event = new GrindstoneEvent.OnPlaceItem(top, bottom, xp);
+        return GrindstoneEvent.OnPlaceItem.BUS.post(event) ? null : event;
     }
 
     public static void onBrewingRecipeRegister(Builder builder, FeatureFlagSet features) {
-        fire(new BrewingRecipeRegisterEvent(builder, features));
+        BrewingRecipeRegisterEvent.BUS.post(new BrewingRecipeRegisterEvent(builder, features));
     }
 
     public static boolean onItemStackedOn(ItemStack carriedItem, ItemStack stackedOnItem, Slot slot, ClickAction action, Player player, SlotAccess carriedSlotAccess) {
-        return post(new ItemStackedOnOtherEvent(carriedItem, stackedOnItem, slot, action, player, carriedSlotAccess));
+        return ItemStackedOnOtherEvent.BUS.post(new ItemStackedOnOtherEvent(carriedItem, stackedOnItem, slot, action, player, carriedSlotAccess));
     }
 
-    public static NoteBlockEvent.Play onNotePlay(Level world, BlockPos pos, BlockState state, int note, NoteBlockInstrument instrument) {
-        return fire(new NoteBlockEvent.Play(world, pos, state, note, instrument));
+    public static @Nullable NoteBlockEvent.Play onNotePlay(Level world, BlockPos pos, BlockState state, int note, NoteBlockInstrument instrument) {
+        var event = new NoteBlockEvent.Play(world, pos, state, note, instrument);
+        return NoteBlockEvent.Play.BUS.post(event) ? null : event;
     }
 
     public static AnvilRepairEvent onAnvilRepair(Player player, @NotNull ItemStack output, @NotNull ItemStack left, @NotNull ItemStack right) {
-        return fire(new AnvilRepairEvent(player, left, right, output));
+        return AnvilRepairEvent.BUS.fire(new AnvilRepairEvent(player, left, right, output));
     }
 
     public static void onPlayerTradeWithVillager(Player player, MerchantOffer offer, AbstractVillager villager) {
-        post(new TradeWithVillagerEvent(player, offer, villager));
+        TradeWithVillagerEvent.BUS.post(new TradeWithVillagerEvent(player, offer, villager));
     }
 
     public static GatherComponentsEvent.Item gatherItemComponentsEvent(Item item, DataComponentMap dataComponents) {
-        return fire(new GatherComponentsEvent.Item(item, dataComponents));
+        return GatherComponentsEvent.Item.BUS.fire(new GatherComponentsEvent.Item(item, dataComponents));
     }
 
     public static LootingLevelEvent fireLootingLevel(LivingEntity target, @Nullable DamageSource cause, int level) {
-        return fire(new LootingLevelEvent(target, cause, level));
+        return LootingLevelEvent.BUS.fire(new LootingLevelEvent(target, cause, level));
     }
 
     public static boolean fireFarmlandTrampleEvent(ServerLevel level, BlockPos pos, BlockState state, double fallDistance, Entity entity) {
-        return post(new BlockEvent.FarmlandTrampleEvent(level, pos, state, fallDistance, entity));
+        return BlockEvent.FarmlandTrampleEvent.BUS.post(new BlockEvent.FarmlandTrampleEvent(level, pos, state, fallDistance, entity));
     }
 }
